--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   </head>
   <body>
     <h1>Welcome</h1>
-    <img src="photo.jpg" />
+    <img src="http://www.garieinternational.com.sg/clay/play_clay/air_plane/SDC13177.jpg" />
     <h2>About</h2>
     <p>I am a 13-year old student from <a href="http://www.dunmanhigh.moe.edu.sg">Dunman High School</a>, Singapore.</p>
     <h2>Interests</h2>
