--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <h1>Welcome</h1>
     <img src="http://www.garieinternational.com.sg/clay/play_clay/air_plane/SDC13177.jpg" />
     <h2>About</h2>
-    <p>I am a 13-year old student from <a href="http://www.dunmanhigh.moe.edu.sg">Dunman High School</a>, Singapore. My primary school is <a href="taonan.moe.edu.sg/">Tao Nan School</a>.I like playing thr guitar and my favourite food is the sumptuous cheeseburger.</p>
+    <p>I am a 13-year old student from <a href="http://www.dunmanhigh.moe.edu.sg">Dunman High School</a>, Singapore. My primary school is <a href="taonan.moe.edu.sg/">Tao Nan School</a>.I like playing the guitar and my favourite food is the sumptuous cheeseburger.</p>
     <h2>Interests</h2>
     <p>I am interested in <a href="http://www.espn.com/nba/">basketball</a>.</p>
     <h2>Projects</h2>
